SUBJECT: finished the partial homepage development MESSAGE: completed landing page Marquee, participate in AI challenges and explore CHallenge components

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+:root{
+    font-size: 16px;
+    --bgc: #003145;
+    --textclr: #ECECEC;
+    --greenClr: #44924C;
+    --deepBgc: #002A3B;
+    --grayBgc: #F8F9FD;
+}
